--- a/index.html
+++ b/index.html
@@ -2,15 +2,15 @@
 <html lang="en">
     <head>
         <title>Private Notes</title>
-        <link rel="stylesheet" href="design.css?v=1.0">
+        <link rel="stylesheet" href="design.css?v=1.1">
         <meta name="viewport" content="width=device-width, initial-scale=1" />
     </head>
     <body>
         <div id="parent" class="parent">
-            <div id="todo" class="child1"><button id="addTodo">+ Add Todo task</button></div>
-            <div id="doing" class="child2"><button id="addDoing">+ Add Doing task</button></div>
-            <div id="done" class="child3"><button id="addDone">+ Add Done task</button></div>
+            <div id="todo" class="child1"><p>Todo</p><button id="addTodo">+</button></div>
+            <div id="doing" class="child2"><p>Doing</p><button id="addDoing">+</button></div>
+            <div id="done" class="child3"><p>Done</p><button id="addDone">+</button></div>
         </div>
-        <script src="app.js?v=1.0" type="text/javascript"></script>
+        <script src="app.js?v=1.1" type="text/javascript"></script>
     </body>
 </html>
