--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Private Notes</title>
+        <title>TO-DO-LIST</title>
         <link rel="stylesheet" href="design.css?v=1.2">
         <meta name="viewport" content="width=device-width, initial-scale=1" />
     </head>
