--- a/index.html
+++ b/index.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>TO-DO-LIST</title>
-        <link rel="stylesheet" href="design.css?v=1.2">
+        <title>TODO-LIST</title>
+        <link rel="stylesheet" href="design.css?v=1.0">
         <meta name="viewport" content="width=device-width, initial-scale=1" />
     </head>
     <body>
-        <nav class="top">
-        <button id="backup">Backup</button>
-        <input id="restore" type="file" name="file" accept="*.json">
-        </nav>
-        <div id="parent" class="parent">
-            <div id="todo" class="child1"><p>Todo</p><button id="addTodo" class="btn">+</button></div>
-            <div id="doing" class="child2"><p>Doing</p><button id="addDoing" class="btn">+</button></div>
-            <div id="done" class="child3"><p>Done</p><button id="addDone" class="btn">+</button></div>
+        <div class="top">
+            <button id="add" class="btn">&#10133;</button>
+            <button id="remove" class="btn">&#10134;</button>
         </div>
-        <script src="app.js?v=1.2" type="text/javascript"></script>
+        <div id="father" class="father">
+            <div id="todo" class="todo"></div>
+            <div id="done" class="done"></div>
+        </div>
+
+        <script src="app.js?v=1.0" type="text/javascript"></script>
     </body>
 </html>
