added body message on bottom

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <div id="todo" class="todo"></div>
             <div id="done" class="done"></div>
         </div>
-
+        <div class="bottom">In conclusion, localStorage is important to use within the same browser because it offers a simple way to store small amounts of data locally on the user's device. This can enhance performance, improve user experience, and facilitate cross-tab communication. However, it's essential to understand its limitations and use it appropriately based on your application's requirements.</div>
         <script src="app.js?v=1.0" type="text/javascript"></script>
     </body>
 </html>
