--- a/index.html
+++ b/index.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>TODO-LIST</title>
-        <link rel="stylesheet" href="design.css?v=1.2">
+        <title>THE TO-DO-LIST</title>
+        <link rel="stylesheet" href="design.css?v=1.35">
         <meta name="viewport" content="width=device-width, initial-scale=1" />
     </head>
     <body>
-        <div class="bottom">In conclusion, localStorage is important to use within the same browser because it offers a simple way to store small amounts of data locally on the user's device. This can enhance performance, improve user experience, and facilitate cross-tab communication. This is a 100% Free TO-DO-LIST Web Page, feel free to use it, updates will occur from time to time. Please be patient and enjoy your stay! You can visit the github open source page here <a href="https://github.com/lobossl/todo">github</a>.</div>
         <div class="top">
-            <button id="add" class="btn">&#10133;</button>
-            <button id="remove" class="btn">&#10134;</button>
+            <p>THE TO-DO-LIST</p>
+            <button id="add" class="btn"></button>
+            <button id="remove" class="btn"></button>
         </div>
         <div id="father" class="father">
             <div id="todo" class="todo"></div>
             <div id="done" class="done"></div>
         </div>
-        <script src="app.js?v=1.2" type="text/javascript"></script>
+        <script src="app.js?v=1.35" type="text/javascript"></script>
     </body>
 </html>
