--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <title>THE TO-DO-LIST</title>
-        <link rel="stylesheet" href="design.css?v=2.0">
+        <link rel="stylesheet" href="design.css?v=2.2">
         <meta name="viewport" content="width=device-width, initial-scale=1" />
     </head>
     <body>
@@ -12,8 +12,10 @@
             <button id="remove" class="btn"></button>
             <button id="download" class="btn"></button>
         </div>
-        <div id="todo" class="todo"></div>
-        <div id="done" class="done"></div>
-        <script src="app.js?v=2.0" type="text/javascript"></script>
+        <div id="container" class="container">
+            <div id="todo" class="todo"></div>
+            <div id="done" class="done"></div>
+        </div>
+        <script src="app.js?v=2.2" type="text/javascript"></script>
     </body>
 </html>
