--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html lang="en">
     <head>
         <title>THE TO-DO-LIST</title>
-        <link rel="stylesheet" href="design.css?v=2.2">
+        <link rel="stylesheet" href="design.css?v=2.3">
         <meta name="viewport" content="width=device-width, initial-scale=1" />
     </head>
     <body>
         <div class="top">
+            <p>THE TO-DO-LIST</p>
             <button id="add" class="btn"></button>
             <button id="remove" class="btn"></button>
             <button id="download" class="btn"></button>
@@ -15,6 +16,6 @@
             <div id="todo" class="todo"></div>
             <div id="done" class="done"></div>
         </div>
-        <script src="app.js?v=2.2" type="text/javascript"></script>
+        <script src="app.js?v=2.3" type="text/javascript"></script>
     </body>
 </html>
