--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <title>THE TO-DO-LIST</title>
-        <link rel="stylesheet" href="design.css?v=2.3">
+        <link rel="stylesheet" href="design.css?v=2.4">
         <meta name="viewport" content="width=device-width, initial-scale=1" />
     </head>
     <body>
@@ -11,11 +11,13 @@
             <button id="add" class="btn"></button>
             <button id="remove" class="btn"></button>
             <button id="download" class="btn"></button>
+            <button id="restore" class="btn"></button>
+
         </div>
         <div id="container" class="container">
             <div id="todo" class="todo"></div>
             <div id="done" class="done"></div>
         </div>
-        <script src="app.js?v=2.3" type="text/javascript"></script>
+        <script src="app.js?v=2.4" type="text/javascript"></script>
     </body>
 </html>
