--- a/index.html
+++ b/index.html
@@ -1,23 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>THE TO-DO-LIST</title>
-        <link rel="stylesheet" href="design.css?v=2.4">
+        <title>THE TODO LIST - https://triohouse.no https://thetodolist.eu</title>
+        <link rel="stylesheet" href="design.css?v=3.0">
         <meta name="viewport" content="width=device-width, initial-scale=1" />
     </head>
     <body>
+        <small>Version 3.0</small>
+        <details>
+            <summary>Settings</summary>
+            <p id="restore">📂Restore</p>
+            <p id="download">💾Backup</p>
+        </details>
         <div class="top">
-            <p>THE TO-DO-LIST</p>
             <button id="add" class="btn"></button>
             <button id="remove" class="btn"></button>
-            <button id="download" class="btn"></button>
-            <button id="restore" class="btn"></button>
-
         </div>
         <div id="container" class="container">
             <div id="todo" class="todo"></div>
             <div id="done" class="done"></div>
         </div>
-        <script src="app.js?v=2.4" type="text/javascript"></script>
+        <script src="app.js?v=3.0" type="text/javascript"></script>
     </body>
 </html>
