--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
+    <head> 
+        <meta charset="UTF-8">
         <title>THE TODO LIST - https://triohouse.no https://thetodolist.eu</title>
         <link rel="stylesheet" href="design.css?v=3.0">
         <meta name="viewport" content="width=device-width, initial-scale=1" />
