--- a/index.html
+++ b/index.html
@@ -1,18 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head> 
+    <head>
         <meta charset="UTF-8">
         <title>THE TODO LIST - https://triohouse.no https://thetodolist.eu</title>
-        <link rel="stylesheet" href="design.css?v=3.0">
+        <link rel="stylesheet" href="design.css?v=3.1">
         <meta name="viewport" content="width=device-width, initial-scale=1" />
     </head>
     <body>
-        <small>Version 3.0</small>
-        <details>
-            <summary>Settings</summary>
-            <p id="restore">📂Restore</p>
-            <p id="download">💾Backup</p>
-        </details>
         <div class="top">
             <button id="add" class="btn"></button>
             <button id="remove" class="btn"></button>
@@ -21,6 +15,12 @@
             <div id="todo" class="todo"></div>
             <div id="done" class="done"></div>
         </div>
-        <script src="app.js?v=3.0" type="text/javascript"></script>
+        <p><details>
+            <summary>Settings</summary>
+            <p id="restore">📂Restore</p>
+            <p id="download">💾Backup</p>
+        </details></p>
+        <small>Coded by LoboSSL</small>
+        <script src="app.js?v=3.1" type="text/javascript"></script>
     </body>
 </html>
