Added tag button
Added tag button

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>THE TODO LIST - https://triohouse.no https://thetodolist.eu</title>
-        <link rel="stylesheet" href="styles.css?v=31082023">
+        <link rel="stylesheet" href="styles.css?v=01092023">
         <meta name="viewport" content="width=device-width, initial-scale=1" />
     </head>
     <body>
@@ -18,7 +18,7 @@
         	</details>
         </div>
     	<div id="main" class="main"></div>
-	<pre>&copy; 2023 Lobo Design <a href="https://github.com/lobossl/todo">Github</a></pre>
-        <script src="./app.js?v=31082023" type="module"></script>
+	<pre>&copy; 2023 Lobo Design</pre>
+        <script src="./app.js?v=01092023" type="module"></script>
     </body>
 </html>
