--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         	</details>
         </div>
     	<div id="main" class="main"></div>
-	<pre>&copy; 2023 Lobo Design</pre>
+	<center><p>&copy; 2023 Lobo Design <a href="https://github.com/lobossl/todo">Github</a></p></center>
         <script src="./app.js?v=01092023" type="module"></script>
     </body>
 </html>
