--- a/index.html
+++ b/index.html
@@ -2,23 +2,22 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>THE TODO LIST - https://triohouse.no https://thetodolist.eu</title>
-        <link rel="stylesheet" href="styles.css?v=01092023">
+        <title>THE TODO LIST - https://triohouse.no - LocalStorage</title>
+        <link rel="stylesheet" href="styles.css?v=151509092023">
         <meta name="viewport" content="width=device-width, initial-scale=1" />
     </head>
     <body>
     	<div>
-		<div class="banner">TheToDoList</div>
         	<details id="details">
         		<summary>Menu</summary>
-        	    <p id="create" class="create">Create NEW</p>
+        	    <p id="create" class="create">New</p>
         	    <p id="restore" class="restore">Restore</p>
         	    <p id="backup" class="backup">Backup</p>
-        	    <p id="clear" class="clear">Delete ALL</p>
+        	    <p id="clear" class="clear">Delete</p>
         	</details>
         </div>
     	<div id="main" class="main"></div>
-	<center><p>&copy; 2023 Lobo Design <a href="https://github.com/lobossl/todo">Github</a></p></center>
-        <script src="./app.js?v=01092023" type="module"></script>
+	<pre>&copy; TheTodoList <a href="https://github.com/lobossl/todo">Github</a></pre>
+        <script src="./app.js?v=151509092023"></script>
     </body>
 </html>
