--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>TheTodoList</title>
-        <link rel="stylesheet" href="styles.css?v=1.03">
+        <link rel="stylesheet" href="styles.css?v=1.04">
         <meta name="viewport" content="width=device-width, initial-scale=1" />
     </head>
     <body class="flex-max flex-col">
@@ -14,6 +14,8 @@
         </header>
     	<main class="padding-def align-def flex-size-5">
             <div class="flex-size-1 padding-def">
+                <p>Choose box color:</p>
+                <p><input type="color" value="#445566" name="favcolor" id="color"></p>
                 <p><input type="text" id="text" class="input-def" placeholder="What to do?"></p>
                 <p><button class="btn-def" id="submit">Submit</button></p>
             </div>
@@ -23,6 +25,6 @@
             <p><a href="https://github.com/lobossl/">Lobo Design</a></p>
             <p id="deleteAll" class="cursor">Delete All</p>
         </footer>
-        <script src="./app.js?v=1.03"></script>
+        <script src="./app.js?v=1.04"></script>
     </body>
 </html>
