--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>TheTodoList</title>
-        <link rel="stylesheet" href="styles.css?v=1.06">
+        <link rel="stylesheet" href="styles.css?v=1.07">
         <meta name="viewport" content="width=device-width, initial-scale=1" />
     </head>
     <body class="flex-max flex-col">
@@ -14,7 +14,7 @@
         </header>
     	<main class="align-def flex-size-1 border-0">
             <div class="flex-size-1">
-                <div id="color" class="flex-def" style="border-top:7px solid #eee;">
+                <div id="color" class="flex-def opacity-def">
                     <div class="flex-size-1 cursor font-size-med padding-def" style="background-color:red; color:#fff;">red</div>
                     <div class="flex-size-1 cursor font-size-med padding-def" style="background-color:blue; color:#fff;">blue</div>
                     <div class="flex-size-1 cursor font-size-med padding-def" style="background-color:green; color:#fff;">green</div>
@@ -31,6 +31,6 @@
             <p><a href="https://github.com/lobossl/todo/">github.com/lobossl</a></p>
             <p id="deleteAll" class="cursor">Delete All</p>
         </footer>
-        <script src="./app.js?v=1.06"></script>
+        <script src="./app.js?v=1.07"></script>
     </body>
 </html>
