--- a/index.html
+++ b/index.html
@@ -2,35 +2,22 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>TheTodoList</title>
-        <link rel="stylesheet" href="styles.css?v=1.07">
+        <title>test</title>
+        <link rel="stylesheet" href="styles.css?v=2.00">
         <meta name="viewport" content="width=device-width, initial-scale=1" />
     </head>
-    <body class="flex-max flex-col">
-        <header class="pad-def align-def flex-size-1 flex-col-center">
-            <div>
-                <h1>TheTodoList</h1>
-            </div>
-        </header>
-    	<main class="align-def flex-size-1 border-0">
-            <div class="flex-size-1">
-                <div id="color" class="flex-def opacity-def">
-                    <div class="flex-size-1 cursor font-size-med padding-def" style="background-color:red; color:#fff;">red</div>
-                    <div class="flex-size-1 cursor font-size-med padding-def" style="background-color:blue; color:#fff;">blue</div>
-                    <div class="flex-size-1 cursor font-size-med padding-def" style="background-color:green; color:#fff;">green</div>
-                    <div class="flex-size-1 cursor font-size-med padding-def" style="background-color:orange; color:#fff;">orange</div>
-                </div>
-                <p><input type="text" id="text" class="input-def radius-def border-0 padding-def font-size-med" placeholder="Enter your next task"></p>
-                <p><button class="font-size-med btn-def radius-def border-0 padding-def margin-def" id="submit">Submit</button></p>
-            </div>
-            <div class="padding-def">
-                <div class="flex-size-1 flex-def flex-gap flex-wrap flex-center" id="read"></div>
-            </div>
-        </main>
-        <footer class="padding-def align-def flex-size-2 flex-col-center">
-            <p><a href="https://github.com/lobossl/todo/">github.com/lobossl</a></p>
-            <p id="deleteAll" class="cursor">Delete All</p>
-        </footer>
-        <script src="./app.js?v=1.07"></script>
+    <body style="background-color: #222;" class="user-select-0">
+        <div class="padding-big align-def" style="background-color: #FF4081; color:#fff;">
+            <p><input type="text" id="text" class="input-def padding-def" placeholder="Insert text here"></p>
+            <p><button id="submit" class="button-def padding-def">Create</button></p>
+        </div>
+        <div class="padding-big" style="background-color: #4CAF50 ; color:#fff;">
+            <div id="read" class="flex-def flex-justify-center flex-wrap flex-gap" style="margin-top: 15px; margin-bottom:15px;"></div>
+        </div>
+        <pre class="align-def padding-big">
+            <p><a href="https://github.com/lobossl/todo">Coded by Github.com/lobossl</a></p>
+            <p><a href="https://thetodolist.eu">TheToDoList.eu</a></p>
+        </pre>
+    <script src="app.js?v=2.00"></script>
     </body>
 </html>
