--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>test</title>
-        <link rel="stylesheet" href="styles.css?v=2.01">
+        <title>TheToDoList</title>
+        <link rel="stylesheet" href="styles.css?v=2.02">
         <meta name="viewport" content="width=device-width, initial-scale=1" />
     </head>
     <body style="background-color: #222;" class="user-select-0">
@@ -18,6 +18,6 @@
             <p><a href="https://github.com/lobossl/todo">Coded by Github.com/lobossl</a></p>
             <p><a href="https://thetodolist.eu">TheToDoList.eu</a></p>
         </pre>
-    <script src="app.js?v=2.01"></script>
+    <script src="app.js?v=2.02"></script>
     </body>
 </html>
