--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
+    <!-- https://github.com/lobossl/todo -->
     <head>
         <meta charset="UTF-8">
         <title>TheToDoList</title>
-        <link rel="stylesheet" href="styles.css?v=2.04">
+        <link rel="stylesheet" href="styles.css?v=2.05">
         <meta name="viewport" content="width=device-width, initial-scale=1" />
     </head>
     <body style="background-color: #222;" class="user-select-0">
@@ -13,7 +14,7 @@
         <div class="padding-big" style="background-color: #445566 ; color:#fff;">
             <div id="read" class="flex-def flex-justify-center flex-wrap flex-gap" style="margin-top: 15px; margin-bottom:15px;"></div>
         </div>
-        <pre class="align-def padding-big">
+        <div class="align-def padding-big">
             <details id="details">
         		<summary class="font-size-med" style="color:#ccc;">Menu</summary>
         	    <p id="deleteAll" style="color:#ccc;" class="padding-0">Delete database</p>
@@ -21,7 +22,7 @@
                 <p id="restore"  style="color:#ccc;" class="padding-0">Restore</p>
         	</details>
             <p><a href="https://github.com/lobossl/todo">Coded by Github.com/lobossl</a></p>
-        </pre>
-    <script src="app.js?v=2.04"></script>
+        </div>
+    <script src="app.js?v=2.05"></script>
     </body>
 </html>
