--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <head>
         <meta charset="UTF-8">
         <title>TheToDoList</title>
-        <link rel="stylesheet" href="styles.css?v=2.05">
+        <link rel="stylesheet" href="styles.css?v=2.06">
         <meta name="viewport" content="width=device-width, initial-scale=1" />
     </head>
     <body style="background-color: #222;" class="user-select-0">
         <div class="padding-big" style="background-color: #FF4081; color:#fff;">
-            <div class="align-def"><input type="text" id="text" style="background-color: #fff;" class="font-size-med padding-def border-0 outline-0" placeholder="Add a task."></div>
+            <div class="align-def"><input type="text" id="text" style="background-color: #FF4081; color:#fff; border-bottom:1px dashed #fff;" class="font-size-med padding-def border-0 outline-0" placeholder="Add a task."></div>
         </div>
         <div class="padding-big" style="background-color: #445566 ; color:#fff;">
             <div id="read" class="flex-def flex-justify-center flex-wrap flex-gap" style="margin-top: 15px; margin-bottom:15px;"></div>
@@ -23,6 +23,6 @@
         	</details>
             <p><a href="https://github.com/lobossl/todo">Coded by Github.com/lobossl</a></p>
         </div>
-    <script src="app.js?v=2.05"></script>
+    <script src="app.js?v=2.06"></script>
     </body>
 </html>
